tests/src/frontend/syntax/invalid/under_ident_7.sk
class Foo<T>{x: T} {
  fun matcher(): T {
    this match {
    | Foo{_ => _} -> _
    }
  }
}
